# streaming-histograms

./: .ghcid  Makefile  streaming-histograms.cabal
src/Data/: Histogram.hs
src/internal/Data/Histogram/: Internal.hs
test/: Test.hs
