name: streaming-histograms
version: 0.1.0
build-type: Simple
cabal-version: >= 1.10

library streaming-histograms-internal
  hs-source-dirs: src/internal
  ghc-options: -Wall
  build-depends:
      base
    , containers
  exposed-modules:
    Data.Histogram.Internal
  default-language: Haskell2010

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      base
    , containers
    , streaming-histograms-internal
  exposed-modules:
    Data.Histogram
  default-language: Haskell2010

test-suite tests
  hs-source-dirs: test
  main-is: Test.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded
  build-depends:
      base
    , containers
    , hedgehog
    , streaming-histograms-internal
  default-language: Haskell2010
